# folie

./: .buildinfo  .gitattributes  .gitignore  README.md  api.html  for_developper.html  genindex.html  howto.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html  statistical_performances.html  todo_list.md  tutorials.html
.doctrees/: api.doctree  for_developper.doctree  howto.doctree  index.doctree  sg_execution_times.doctree  statistical_performances.doctree  tutorials.doctree
.doctrees/api/: analysis.doctree  dataloading.doctree  estimation.doctree  functions.doctree  models.doctree
.doctrees/auto_examples/: example_em.doctree  index.doctree  plot_basis.doctree  plot_biasedOU.doctree  plot_example.doctree  plot_fem.doctree  plot_functions.doctree  plot_likelihood.doctree  sg_execution_times.doctree
.doctrees/notebooks/: analysis_committor.doctree  estimation.doctree  simulations.doctree
.github/workflows/: CI.yml  deploy.yml  documentation.yml
_downloads/0541da993454af5e0289eabbf47cbc23/: plot_likelihood.ipynb
_downloads/06ea7db86d76538651ce447c4676348d/: plot_biasedOU.ipynb
_downloads/1e20388cba9a750a97082557b5eaaea2/: plot_fem.py
_downloads/28bf5b885c707f7863eaed624722ca82/: plot_example.ipynb
_downloads/2e5867fd261f97e944b67fd63ed339de/: plot_1D_Double_Well.ipynb
_downloads/2efaff5f5c4e7014569acde91bdaa3e4/: plot_1D_Double_Well.py
_downloads/38e15dfb62c2deeeb4068ae89c8ca28c/: plot_fem.ipynb
_downloads/41d2fe6defd798a4f411bf98a001982c/: plot_biasedOU.py
_downloads/6230afd613d130bddf1486cda6522012/: plot_biased_1D_Double_Well.ipynb
_downloads/6549d1db531f6b4408f1f3849ae52328/: plot_basis.py
_downloads/694ec899394a196c95b922b582193cc0/: plot_basis.ipynb
_downloads/6bb2e5b5a4388ea422e39a398dce267b/: plot_biased_1D_Double_Well.py
_downloads/77a81bd228c71fd6d8fde52bc83877a9/: plot_functions.ipynb
_downloads/7b4223b0046df8851de26a4d299de310/: example_em.ipynb
_downloads/acd7518a7bb9aef77ff26dece9eebeab/: plot_biased_2D_Double_Well.ipynb
_downloads/be0bae8da11dbbebae230b2930be48f3/: plot_2D_Double_Well.ipynb
_downloads/c014d82536cd739a6f743f1c6ab12a79/: example_em.py
_downloads/c16f20a830bbd5ffd989ee3baa4cb246/: plot_biased_2D_Double_Well.py
_downloads/cfc0ebf3b0506f67c01960afbf90cae2/: plot_functions.py
_images/: inheritance-aa556818aa3e50a34536fefe0280fdfe4167d816.png.map
_modules/: index.html
_sources/: for_developper.rst.txt  index.rst.txt  sg_execution_times.rst.txt  statistical_performances.rst.txt  tutorials.rst.txt
_sources/api/: analysis.rst.txt  dataloading.rst.txt  estimation.rst.txt  functions.rst.txt  models.rst.txt
_sources/auto_examples/: example_em.rst.txt  index.rst.txt  plot_basis.rst.txt  plot_biasedOU.rst.txt  plot_example.rst.txt  plot_fem.rst.txt  plot_functions.rst.txt  plot_likelihood.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
api/: analysis.html  dataloading.html  estimation.html  functions.html  models.html
auto_examples/: example_em.html  index.html  plot_basis.html  plot_biasedOU.html  plot_example.html  plot_fem.html  plot_functions.html  plot_likelihood.html  sg_execution_times.html
auto_examples/toy_models/: index.html  plot_1D_Double_Well.html  plot_2D_Double_Well.html  plot_biased_1D_Double_Well.html  plot_biased_2D_Double_Well.html  sg_execution_times.html
benchmark/: benchmark_basis_functions.py  benchmark_estimator.py  benchmark_functions.py  benchmark_likelihood.py  benchmark_linearalgebra.py
docs/: Makefile  api.rst  conf.py  for_developper.rst  howto.rst  index.rst  references.bib  tutorials.rst
docs/_templates/: class.rst
docs/api/: estimation.rst  functions.rst  models.rst
docs/notebooks/: Spatial_dependance.ipynb  analysis_committor.ipynb  estimation.ipynb  simulations.ipynb  statistical_performances
examples/: DNA hairpin.ipynb  example_em.py  plot_basis.py  plot_biasedOU.py  plot_committor_fem.py  plot_em.py  plot_example.py  plot_fem.py  plot_free_energy.py  plot_functions.py  plot_likelihood.py  plot_underdamped.py  profile_example.py
examples/datasets/: example_biased_umbrella.trj  example_underdamped.trj
examples/statistical_performances/: README.md  overdampedOU.ipynb
examples/toy_models/: README.rst  plot_1D_Double_Well.py  plot_2D_Double_Well.py  plot_biased_1D_Double_Well.py  plot_biased_2D_Double_Well.py
folie/: __init__.py  _numdifference.py  _numpy.py  _version.py  base.py
folie/analysis/: __init__.py  (+3 more)
notebooks/: analysis_committor.html  estimation.html  simulations.html
statistical_validation/: README.md  test_biasedOU.py  test_overdampedOU.py  test_overdampedhiddenOU.py
tests/: test_data.py  test_estimator.py  test_functions.py  test_likelihood.py  test_models.py  test_simulation.py  test_utils.py
toy models/: 1dDWPotential_with shape error.py  2D Double Well.ipynb  2D double well.py  DWPotential.py  Double well potential.ipynb  estimator play.py  prove.ipynb
toy_models/: estimator play.py  prove.ipynb  single well potential.py
(+123 files in other folders)
